--- a/node-placeholder/values.yaml
+++ b/node-placeholder/values.yaml
@@ -1,10 +1,10 @@
 replicaCount: 1
 
 image:
-  repository: us-central1-docker.pkg.dev/ucb-datahub-2018/core/node-placeholder-scaler
+  repository: us-central1-docker.pkg.dev/cal-icor-hubs/core/node-placeholder-scaler
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "20240731-224556.git.8652.h618d172c"
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
