--- a/support/values.yaml
+++ b/support/values.yaml
@@ -22,7 +22,7 @@ cert-manager:
 ingress-nginx:
   controller:
     config:
-      # Let's preserve ability to have HTTP pages served under *.datahub.berkeley.edu
+      # Let's preserve ability to have HTTP pages served under *.jupyter.cal-icor.org
       # when necessary. Ideally would not be, but I want to preserve that option.
       hsts-include-subdomains: "false"
       # Increasing these per https://kubernetes.github.io/ingress-nginx/user-guide/miscellaneous/#websockets
@@ -136,10 +136,10 @@ grafana:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt-prod
     hosts:
-      - grafana.datahub.berkeley.edu
+      - grafana.jupyter.cal-icor.org
     tls:
     - hosts:
-      - grafana.datahub.berkeley.edu
+      - grafana.jupyter.cal-icor.org
       secretName: grafana-https-auto-tls
 
   grafana.ini:
@@ -157,7 +157,7 @@ grafana:
       # read timeout set above under `ingress.annotations`.
       timeout: 120
     server:
-      root_url: https://grafana.datahub.berkeley.edu/
+      root_url: https://grafana.jupyter.cal-icor.org/
 
   datasources:
     datasources.yaml:
