--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -13,8 +13,6 @@ dockerfile:
 
 # add labels for non-singleuser image config changes
 configuration:
-  - '**/apt.txt'
-  - '**/infra-requirements.txt'
   - '**/requirements.in'
   - '**/dev-requirements.txt'
   - '**/requirements.txt'
@@ -22,11 +20,6 @@ configuration:
   - '**/*.json'
   - '**/*.yml'
   - '**/*.yaml'
-
-# catch all singleuser image config changes
-singleuser-image:
-  - 'deployments/**/image/**'
-  - 'deployments/**/images/**'
 
 # changes to hub images
 hub-images:
@@ -46,7 +39,6 @@ documentation:
 
 # add build-infra label to any .github or circleci changes
 build-infra:
-  - '.circleci/**'
   - any: ['.github/**', '!.github/ISSUE_TEMPLATE/**']
   - '.gitignore'
 
@@ -82,57 +74,5 @@ node-placeholder-scaler:
   - 'images/node-placeholder-scaler/**'
 
 # add hub-specific labels for deployment changes
-'hub: a11y':
-  - 'deployments/a11y/**'
-'hub: astro':
-  - 'deployments/astro/**'
-'hub: biology':
-  - 'deployments/biology/**'
-'hub: cee':
-  - 'deployments/cee/**'
-'hub: data100':
-  - 'deployments/data100/**'
-'hub: data101':
-  - 'deployments/data101/**'
-'hub: data102':
-  - 'deployments/data102/**'
-'hub: data8':
-  - 'deployments/data8/**'
-'hub: datahub':
-  - 'deployments/datahub/**'
-'hub: dlab':
-  - 'deployments/dlab/**'
-'hub: dev':
-  - 'deployments/dev/**'
-'hub: edx':
-  - 'deployments/edx/**'
-'hub: eecs':
-  - 'deployments/eecs/**'
-'hub: highschool':
-  - 'deployments/highschool/**'
-'hub: ischool':
-  - 'deployments/ischool/**'
-'hub: julia':
-  - 'deployments/julia/**'
-'hub: logodev':
-  - 'deployments/logodev/**'
-'hub: nature':
-  - 'deployments/nature/**'
-'hub: prob140':
-  - 'deployments/prob140/**'
-'hub: publichealth':
-  - 'deployments/publichealth/**'
-'hub: r':
-  - 'deployments/r/**'
-'hub: shiny':
-  - 'deployments/shiny/**'
-'hub: stat159':
-  - 'deployments/stat159/**'
-'hub: stat20':
-  - 'deployments/stat20/**'
-'hub: ugr01':
-  - 'deployments/ugr01/**'
-'hub: workshop':
-  - 'deployments/workshop/**'
-'hub: gradebook':
-  - 'deployments/gradebook/**'
+'hub: base':
+  - 'deployments/base/**'
