--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,14 +2,13 @@ name: Bug Report
 description: Raise issues here
 labels: "bug"
 assignees:
-- felder
-- balajialg
+- sean-morris
 - shaneknapp
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to help us improve Datahub! Please follow the sections in the template and provide as much information as possible
+        Thanks for taking the time to help us improve Cal-ICOR hubs! Please follow the sections in the template and provide as much information as possible.
   - type: textarea
     attributes:
       label: Bug description
@@ -21,7 +20,7 @@ body:
       label: Environment & setup
       description: In which environment does the problem occur
       value: |
-        - Hub: <!--[e.g. Datahub, Data 8, Data 100, Public Health, ...]-->
+        - Hub: <!--[e.g. Name of the hub ...]-->
         - Language: <!--[Python, Julia, R, ...]-->
     validations:
       required: true
