--- a/.github/ISSUE_TEMPLATE/cpu_template.yml
+++ b/.github/ISSUE_TEMPLATE/cpu_template.yml
@@ -2,7 +2,7 @@ name: CPU Request
 description: Raise more CPU for students in your class
 labels: "support"
 assignees:
-- felder
+- sean-morris
 - shaneknapp
 body:
   - type: markdown
