adding base hub for MVP purposes, slight mods to cookiecutter template

--- a/deployments/base/config/common.yaml
+++ b/deployments/base/config/common.yaml
@@ -1,7 +1,7 @@
 nfsPVC:
   enabled: true
   nfs:
-    serverIP: {{cookiecutter.hub_filestore_ip}}
+    serverIP: ip-address-of-fileshare-instance
 
 jupyterhub:
   scheduling:
@@ -46,7 +46,7 @@ jupyterhub:
       # Unset NotebookApp from hub/values. Necessary for recent lab versions.
       JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
     nodeSelector:
-      hub.jupyter.org/pool-name: {{cookiecutter.pool_name}}
+      hub.jupyter.org/pool-name: cal-icor-pool
     storage:
       type: static
       static:
