--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==23.1.0
 chardet==5.2.0
 chartpress==2.2.0
 git+https://github.com/berkeley-dsep-infra/hubploy.git
+kubernetes==31.0.0
 myst-parser==4.0.0
 niquests==3.7.2
 pygithub==2.4.0
