--- a/support/values.yaml
+++ b/support/values.yaml
@@ -87,7 +87,7 @@ prometheus:
       - nodes=[*]
   server:
     nodeSelector:
-      hub.jupyter.org/pool-name: prometheus-pool
+      hub.jupyter.org/pool-name: core-pool-2024-11-04
     resources:
       # Without this, prometheus can easily starve users
       requests:
