--- a/deployments/base/config/common.yaml
+++ b/deployments/base/config/common.yaml
@@ -7,15 +7,15 @@ jupyterhub:
   scheduling:
     userScheduler:
       nodeSelector:
-        hub.jupyter.org/pool-name: core-pool-2024-11-04 
+        hub.jupyter.org/pool-name: core-2024-11-04 
   proxy:
     chp:
       nodeSelector:
-        hub.jupyter.org/pool-name: core-pool-2024-11-04 
+        hub.jupyter.org/pool-name: core-2024-11-04 
 
   hub:
     nodeSelector:
-      hub.jupyter.org/pool-name: core-pool-2024-11-04 
+      hub.jupyter.org/pool-name: core-2024-11-04 
     config:
     # loadRoles:
       # cal-icor staff
