add filestore ip, rename base to cal-icor

--- a/deployments/cal-icor/config/common.yaml
+++ b/deployments/cal-icor/config/common.yaml
@@ -1,7 +1,7 @@
 nfsPVC:
   enabled: true
   nfs:
-    serverIP: ip-address-of-fileshare-instance
+    serverIP: 10.95.98.178
 
 jupyterhub:
   scheduling:
