--- a/deployments/base/secrets/prod.yaml
+++ b/deployments/base/secrets/prod.yaml
@@ -1,22 +1,12 @@
 jupyterhub:
     hub:
-        extraContainers:
-            - name: ENC[AES256_GCM,data:l4/8faRZ0bl1tZ87wKs=,iv:3ccYe3voAVlNoP8JA2+XmKdxSfh+ecYlKp/ZKSl7UuI=,tag:M5bGGophrNqkXOYpOdzQtQ==,type:str]
-              image: ENC[AES256_GCM,data:Px69h5QpX2MNDg==,iv:kQjZJEpknOFJ8yWAnNUqYhtgD2aKRKDx3iN26PBPfPw=,tag:jyrVXL2qnTahjFekMK0KIQ==,type:str]
-              workingDir: ENC[AES256_GCM,data:dzfovTaFovaF,iv:mzjgw8LmbKGMJYwdd57mu/tFDv4oWS/uzDXHXA/xbac=,tag:bnErDm18/doTi42ebKUjlw==,type:str]
-              command:
-                - ENC[AES256_GCM,data:uZcfvaBWKw==,iv:YLDM1LiluZJJLMCJcsoM+Hg3C4nNfgLAYW3q7GQAxaU=,tag:GPLwyygpyygc72KPqpVy2w==,type:str]
-              args:
-                - ENC[AES256_GCM,data:azs=,iv:fHNp31tWmH4rnKrlek2tYOUfogshhhebbY9wFSl6n0w=,tag:QcU0Qaedh0GsinHMcuuEow==,type:str]
-                - ENC[AES256_GCM,data:19gs+q4eS0G3rukwYZzcG/7M9QsmHJcsSc2h8J9IaqL2WUEwCn1PCmMrXsYm6kC/B2kl4/O1nkSLbRoQsj6kMXjRkg80M6yk,iv:VMT3mkXmqQMh7h7Q6FF1p1xsr89QsxgHKDoTIAJ2/Cw=,tag:CmgWc/OwqreT252FWFVvuQ==,type:comment]
-                - ENC[AES256_GCM,data:PB/m7e4nst9DPBRm8cEr7UQayQZ4aEmSFnKB8zF98Ioh29snLqAdU87XaH/jtCwfcrJmTGvFlV8iMpXJzX4K8pzFsRn+BHMRaLD3LOwBCw==,iv:mcRWgMsTTx2n/QAEkkyj9pfYbdYmjtqqF3Ku48CgGWw=,tag:x1eiKBJ6J5ggH383Fs72rw==,type:str]
-              securityContext:
-                runAsUser: ENC[AES256_GCM,data:NhtdXQ==,iv:7RLtny+Gu/oWxLxR6kbO9KQ/KOEluPJHw9yz+vQU1sI=,tag:mHQZAoZ8li8zgN5EhpofSQ==,type:int]
-                allowPrivilegeEscalation: ENC[AES256_GCM,data:seBoYSI=,iv:jSD5E/Xfyx7ckz3RGBXo+TLpPaQwV/sEwUziTckXBwo=,tag:/6GOVjWCpgd+EFVvDF625w==,type:bool]
-                readOnlyRootFilesystem: ENC[AES256_GCM,data:wYFc+Q==,iv:JqRmPVU5pGJ5nHbzXMCQs4/ucpR9Qq3rZORopDZXTXA=,tag:mVSrBb9ppMQFrjWuHQciyQ==,type:bool]
-              volumeMounts:
-                - name: ENC[AES256_GCM,data:XkCBrSFqWxAz0PS1JEZ0NQ==,iv:auSeF1OfcPUwIdjGnmENd/nc96VJ6qVu/IAzFappjG8=,tag:riylVRr00CM3rzRdy1x+YA==,type:str]
-                  mountPath: ENC[AES256_GCM,data:g4H78D5JtWdv,iv:34B4hMimww/0agCaQszB/PDzoKUsKs/jdJK0mbtipgw=,tag:zokt0qnU+1l7PtdwzJRhdg==,type:str]
+        config:
+            OAuthenticator:
+                oauth_callback_url: ENC[AES256_GCM,data:0zD93NikHvcHzBjlfSwox2cwcSc3iux4nfsyIsBYUXE/ipGwOwcQN+jd+HeJE9ccHwRhjg==,iv:o7ZBx+o9ztQNIw9VMfKdHz9AiQFfhoDHH26CPqezYbc=,tag:L0NtNzyD9CiQ+pSU07fbGQ==,type:str]
+                client_id: ENC[AES256_GCM,data:ZjJr57eGTz/RC0l4o4ZhexUaqDs=,iv:BZZckRXJmLoPgox5GcBJ0devx0e0izSu//3jLgB26ks=,tag:qFYpPQxWn2qcCh8OZynKxA==,type:str]
+                client_secret: ENC[AES256_GCM,data:OEcneEHh/RuNgL4IQwacaHEdUpWJ+zt6CVbJkCct0Dqfpdn+ZfRakg==,iv:CWjyZD/D4luX5cok1l7srh6UybO0NqTUvgPqiYL846Q=,tag:wBYwHfE2f9qfowGh2BGJZA==,type:str]
+            JupyterHub:
+                authenticator_class: ENC[AES256_GCM,data:OOWpNi+6,iv:Z/S+qw3XmxnXioJ8zBlI5Vr+n7XxYkU/zu0rMgqr9CI=,tag:UsYJv0ouK59zfuybZITiOA==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -26,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-12-05T00:12:09Z"
-    mac: ENC[AES256_GCM,data:U4Afm+ujCQ+d4TdHZeePMFREtiC6+htX4LF5wJ0nZDCNGftI7UYN/G01YNNN7oTVOkH+VNXveyiORbOaBNQV8TL/p25YAnosrUAl0frWjNXVd19g3V+6rGv2cgY74puDST2V6SFdeZySQpHhxIalQkce4dkkSOndg3jjvW6ULlo=,iv:7YFYy7ykm+f8KcFtMlCzDvCJE5Oy9FMMBeXviXSRT/M=,tag:iCHzUvPicyrp93ea4xIZcw==,type:str]
+    lastmodified: "2025-01-28T01:42:23Z"
+    mac: ENC[AES256_GCM,data:AxS5XR01L4qdkuowX8b2X0qjaStVy51Xyz5IjIjfEiWbbn9tzXNlO+99P4/Bl5roINDtcYKsyaakhAwY64TKe+XtNyle6AVEOCmzLJH+SH/v7mDoS23IwZvRMSLti7XeJTC7QGRF2Js6GlaFI0wveQP/JbFL1WMTZzF4l2Vaf/s=,iv:lypDsD87VoNHhlwdOpayKHihjZ09ihdyKRr2+k7GR8M=,tag:1ZnHrXoCifRPjry3lAGNhw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
