--- a/deployments/base/secrets/staging.yaml
+++ b/deployments/base/secrets/staging.yaml
@@ -1,22 +1,12 @@
 jupyterhub:
     hub:
-        extraContainers:
-            - name: ENC[AES256_GCM,data:BncfDb8g7gGYOCAUYE4=,iv:JAACmwtfrH/DeHrQUOek+esaZTIOeQayqIpPR4c90vE=,tag:a7WRFAoV2+y9IeEbSf91rA==,type:str]
-              image: ENC[AES256_GCM,data:b1VqaE2LZLb5qA==,iv:uIPXJOyuND/B0neb4DkwfdCF8fCs3HbeI5HuNq1cDYc=,tag:DpmkmZvQcyxB6Gqr9vKNMA==,type:str]
-              workingDir: ENC[AES256_GCM,data:f3N+zI+8IfqT,iv:9rP7XbgEidfMKwurTXVIT16Yg5xoJ8BkkBx70qBXSzE=,tag:IzKS87Rq+J9W+z/Kv/uEgg==,type:str]
-              command:
-                - ENC[AES256_GCM,data:c3If8mkB7w==,iv:925PPELDruTWy1B3ZmtztRrlSd1p1AXRy6eYZ3ufZ1k=,tag:I5jkydGrF+y8Gn69W2arJw==,type:str]
-              args:
-                - ENC[AES256_GCM,data:tQw=,iv:LKukzLZljZhudhGac4WinoUFekI4RCobz/YHBgK7cOw=,tag:fdbKqDFX72SD8MWfv0Nupw==,type:str]
-                - ENC[AES256_GCM,data:GJ05TMinGmasqr0usHL69/vYMeT5nXpSS5edyhGqrM0LcWWFn2fIzs/NPxWT1SRAo63iUjBo3kXUTINw+XqbPl1gu60ITMnd,iv:7B9+Nb5vMK5lYSrdp+FminOGz651OXN/gfIzLTx125k=,tag:Wl1OYGBbGxCR0PlkLxpkng==,type:comment]
-                - ENC[AES256_GCM,data:rbR0m//ijenrlw4f0uNZBA/UX9cQjCTCrW3jLOEuEFY3qGQLahd+0KVJXzzx5vGPAGFCsCtYDd3Dz65Bk8/x9EeMQKnBPbmyLrhjFgxvkg==,iv:xcJS7UijOSMX05IAj5f2tUzAaKJx06Sr1gW+UHiTNVM=,tag:wDLWnsX+ADUEoUKqN7P31g==,type:str]
-              securityContext:
-                runAsUser: ENC[AES256_GCM,data:TNLf8A==,iv:c/urErx6ta6gS3iIMGwzDXdVx8LCdcHK4MXMhMcHgHk=,tag:rPkyXCULc7ri4E14UM68HQ==,type:int]
-                allowPrivilegeEscalation: ENC[AES256_GCM,data:8WDkVW0=,iv:pX2qbiGkvDJbFkTt+JDQJYjH81b7Kh8aOQxIaWKOnaQ=,tag:2GKYdA/ztQiYTSnYkGzmqA==,type:bool]
-                readOnlyRootFilesystem: ENC[AES256_GCM,data:SHH2Lg==,iv:mSbuGRGlB2FauDVt5c6wQOyzyIpfaaHkBwhmHrSh8t0=,tag:GP0CFuHkt2OMVMgtWnfnEA==,type:bool]
-              volumeMounts:
-                - name: ENC[AES256_GCM,data:JrpSysBVCz0vzXiQ6TO3NA==,iv:pX+KRDG3EXtnKzk6BS40uDBWWuMzunAGv1ph8dX4tXg=,tag:AySajV+DKfmTQvfW1vIwpA==,type:str]
-                  mountPath: ENC[AES256_GCM,data:qjcM/z3Sw9mr,iv:kSN1ueL4MHzsRjWq0oaMrr0ZjwUgRKcIRv7fRSmxWqM=,tag:ea4l042Vp3qCg5bjU9WNZQ==,type:str]
+        config:
+            OAuthenticator:
+                oauth_callback_url: ENC[AES256_GCM,data:we5Cu7DSGpXz0ongcG5AQoJweNNfCiFvYaQYoF4x36CHIhIFudVcdos304W/WLvgJaNOYw==,iv:yrhGz49gY5qq8RvA0CfaQWOo0ZNB95E1jvFASefO0og=,tag:RoyP+BALkubV1BSWFl3Nww==,type:str]
+                client_id: ENC[AES256_GCM,data:3jJikt9DJDClHkJuYtVTwxVyO0k=,iv:atovn0N4a8ruNyWWBkScCF20+7B1LSnayUECheDvLWw=,tag:SjlvQqr7Qz4XKYzh4atSLg==,type:str]
+                client_secret: ENC[AES256_GCM,data:3Q9QrTtBkeDGdtF1klyW3zV/TP4H3ybHPSVTZo2V8O/Qh88gqMLRUw==,iv:BoAPkdxjJzZGWvCLAiy3/1/Ogu7gApPVMe/KIkfEn3o=,tag:2BMUmal6ctX783rzMX0QyA==,type:str]
+            JupyterHub:
+                authenticator_class: ENC[AES256_GCM,data:b1/HLHON,iv:JzVJqFpsND7pD4trVc96YCX+TL5Tvkp3F4GXCZ/xSTQ=,tag:vdAztpajwPUCHtNhyDanyg==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -26,8 +16,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2024-12-05T00:11:41Z"
-    mac: ENC[AES256_GCM,data:TcuoiYhC9t1KoxI6LkZESDi+V4zMb6U7aUtnEMX1UEcFjvpCsRey0/7MUZ7dgok/Iby0AoMWg5X1JhQ7+gFKjO2ugj9CDVSbPX9+YmnJ1Ossrp6Xii7RHSz1a+WsfB6Y0inK4oXFwoPPEcv4ifCX3R5qqeNpGIK1HskhJPrjXbA=,iv:a7pNfe55XZd+EhqWWQ8l5ELRg1/5hGxYYqqMJOPkZNE=,tag:pr2jSS00DC7PH0s8hqgdGg==,type:str]
+    lastmodified: "2025-01-28T01:41:39Z"
+    mac: ENC[AES256_GCM,data:oSddozok0eNDHTJKHRC9yHyemYZyl8nTCvNLScuggYyrqJSmEStEfMIIQ7Sw+FNVc9IqiHCdCuI0dW8VGBXJXt4gRg5vXJ7tIabOVpSkvwtyxFq2k5VQgvWoMypZWqMey4FyZrJV9JeWk9/h8zjSh6bPpW2F/W3y5WEUszmisVE=,iv:JDSI5+93z3WN/WbIw49oQTwK7JjDYjF+rp+tNk+JCiI=,tag:kRlISf0gB5WnWO3mYfL/yg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
