--- a/deployments/base/config/common.yaml
+++ b/deployments/base/config/common.yaml
@@ -1,7 +1,7 @@
 nfsPVC:
   enabled: true
   nfs:
-    serverIP: 10.95.98.178
+    serverIP: TBD
 
 jupyterhub:
   scheduling:
@@ -52,7 +52,7 @@ jupyterhub:
       # Unset NotebookApp from hub/values. Necessary for recent lab versions.
       JUPYTERHUB_SINGLEUSER_APP: "jupyter_server.serverapp.ServerApp"
     nodeSelector:
-      hub.jupyter.org/pool-name: cal-icor-pool
+      hub.jupyter.org/pool-name: base-pool
     storage:
       type: static
       static:
