--- a/deployments/base/config/prod.yaml
+++ b/deployments/base/config/prod.yaml
@@ -1,16 +1,16 @@
-nfsPVC:
-  nfs:
-    shareName: TBD
+#nfsPVC:
+#  nfs:
+#    shareName: TBD
 
 jupyterhub:
   ingress:
     enabled: true
     hosts:
       - base.jupyter.cal-icor.org
-    tls:
-      - secretName: tls-cert
-        hosts:
-          - base.jupyter.cal-icor.org
+#    tls:
+#      - secretName: tls-cert
+#        hosts:
+#          - base.jupyter.cal-icor.org
   hub:
     db:
       pvc:
